--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         It is Player 1's turn
       </h3>
       </h3> 
-      <div class="mx-auto grid w-1/3 grid-cols-3 place-items-center p-3 md:p-20">
+      <div class="mx-auto grid w-full md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
         <!-- input row 1 -->
         <input
           id="1"
