--- a/src/index.html
+++ b/src/index.html
@@ -19,23 +19,23 @@
         It is Player 1's turn
       </h3>
       </h3> 
-      <div class="mx-auto grid w-full md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
+      <div class="mx-auto grid w-5/6 md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
         <!-- input row 1 -->
         <input
           id="1"
-          class="w-full cursor-pointer border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="T"
         />
         <input
           id="2"
-          class="w-full cursor-pointer border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 border-l-2 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 border-l-2 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="I"
         />
         <input
           id="3"
-          class="w-full cursor-pointer border-b-2 border-l-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-b-2 border-l-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="C"
         />
@@ -43,19 +43,19 @@
         <!-- input row 2 -->
         <input
           id="4"
-          class="w-full cursor-pointer border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 border-t-2 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 border-t-2 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="T"
         />
         <input
           id="5"
-          class="w-full cursor-pointer border-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="A"
         />
         <input
           id="6"
-          class="w-full cursor-pointer border-t-2 border-l-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-t-2 border-l-2 border-b-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="C"
         />
@@ -63,19 +63,19 @@
         <!-- input row 3 -->
         <input
           id="7"
-          class="w-full cursor-pointer border-t-2 border-r-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-t-2 border-r-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="T"
         />
         <input
           id="8"
-          class="w-full cursor-pointer border-t-2 border-l-2 border-r-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-t-2 border-l-2 border-r-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="O"
         />
         <input
           id="9"
-          class="w-full cursor-pointer border-l-2 border-t-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
+          class="w-full cursor-pointer rounded-none border-l-2 border-t-2 dark:bg-gray-800 dark:text-gray-300 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-600 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="E"
         />
