--- a/src/index.html
+++ b/src/index.html
@@ -21,19 +21,19 @@
       </h3> 
       <div class="mx-auto grid w-5/6 md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
         <!-- input row 1 -->
-        <input
+        <input readonly
           id="1"
           class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5 placeholder:opacity-10"
           type="text"
           placeholder="T"
         />
-        <input
+        <input readonly
           id="2"
           class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 border-l-2 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5 placeholder:opacity-10"
           type="text"
           placeholder="I"
         />
-        <input
+        <input readonly
           id="3"
           class="w-full cursor-pointer rounded-none border-b-2 border-l-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5 placeholder:opacity-10"
           type="text"
@@ -41,19 +41,19 @@
         />
 
         <!-- input row 2 -->
-        <input
+        <input readonly
           id="4"
           class="w-full cursor-pointer rounded-none border-r-2 border-b-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 border-t-2 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5 placeholder:opacity-10"
           type="text"
           placeholder="T"
         />
-        <input
+        <input readonly
           id="5"
           class="w-full cursor-pointer rounded-none border-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5 placeholder:opacity-10"
           type="text"
           placeholder="A"
         />
-        <input
+        <input readonly
           id="6"
           class="w-full cursor-pointer rounded-none border-t-2 border-l-2 border-b-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none placeholder:opacity-10 md:px-5 md:py-5"
           type="text"
@@ -61,19 +61,19 @@
         />
 
         <!-- input row 3 -->
-        <input
+        <input readonly
           id="7"
           class="w-full cursor-pointer rounded-none border-t-2 border-r-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none placeholder:opacity-10 md:px-5 md:py-5"
           type="text"
           placeholder="T"
         />
-        <input
+        <input readonly
           id="8"
           class="w-full cursor-pointer rounded-none border-t-2 border-l-2 border-r-2 dark:bg-gray-800 dark:text-gray-100 placeholder:opacity-10 dark:placeholder:text-gray-600 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5"
           type="text"
           placeholder="O"
         />
-        <input
+        <input readonly
           id="9"
           class="w-full cursor-pointer rounded-none border-l-2 border-t-2 dark:bg-gray-800 dark:text-gray-100 dark:placeholder:text-gray-600 placeholder:opacity-10 bg-gray-50 text-center text-6xl text-gray-700 focus:outline-none md:px-5 md:py-5"
           type="text"
