added more padding on mobile and turn creator footer into hyperlink

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       </div>
 
       <h3 class="text-center text-sm font-semibold text-gray-500">
-        Created with 🖤 by Davian Lounds
+        Created with 💙 by
+        <a class="text-blue-400" href="iamdavian.com">Davian Lounds</a>
       </h3>
     </div>
   </body>
