--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         It is Player 1's turn
       </h3>
       </h3> 
-      <div class="mx-auto grid w-5/6 md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
+      <div class="mx-auto grid w-9/12 md:w-1/3 grid-cols-3 place-items-center p-0 md:p-20">
         <!-- input row 1 -->
         <input readonly
           id="1"
@@ -90,7 +90,7 @@
         Restart
       </button>
       <h3 class="text-center text-sm font-semibold text-gray-500">
-        Created with 🖤 by Davian Lounds
+        Created with 💙 by <a class="text-blue-400" href="iamdavian.com">Davian Lounds</a> 
       </h3>
     </div>
 
