--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 
       <h3 class="text-center text-sm font-semibold text-gray-500">
         Created with 💙 by
-        <a class="text-blue-400" href="iamdavian.com">Davian Lounds</a>
+        <a class="text-blue-400" href="https://www.iamdavian.com/"
+          >Davian Lounds</a
+        >
       </h3>
     </div>
   </body>
