added more padding on mobile and turn creator footer into hyperlink

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
         Restart
       </button>
       <h3 class="text-center text-sm font-semibold text-gray-500">
-        Created with 💙 by <a class="text-blue-400" href="iamdavian.com">Davian Lounds</a> 
+        Created with 💙 by <a class="text-blue-400" href="https://www.iamdavian.com/">Davian Lounds</a> 
       </h3>
     </div>
 
